docs(openspec): 对齐当前架构规范口径